k8s/staging/ingress-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netmanager-ingress
  namespace: netmanager-staging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - staging.radpro.id
        - admin-staging.radpro.id
        - karyawan-staging.radpro.id
        - pelanggan-staging.radpro.id
        - investor-staging.radpro.id
      secretName: netmanager-tls-staging
  rules:
    - host: staging.radpro.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netmanager-app
                port:
                  number: 80
    - host: admin-staging.radpro.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netmanager-app
                port:
                  number: 80
    - host: karyawan-staging.radpro.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netmanager-app
                port:
                  number: 80
    - host: pelanggan-staging.radpro.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netmanager-app
                port:
                  number: 80
    - host: investor-staging.radpro.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netmanager-app
                port:
                  number: 80
